[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/gui/crafting_button.gd" type="Script" id=1]
[ext_resource path="res://shaders/crafting_button.shader" type="Shader" id=2]
[ext_resource path="res://images/items/apple.png" type="Texture" id=3]
[ext_resource path="res://images/gui/arrow_tiny.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[node name="crafting_button" type="VBoxContainer"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_container" type="VBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 59.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="recipe_button" type="Button" parent="main_container"]
visible = false
material = SubResource( 1 )
margin_right = 128.0
margin_bottom = 20.0
text = "slice apples"
icon = ExtResource( 3 )
expand_icon = true

[node name="cost_label" type="Label" parent="main_container"]
margin_right = 200.0
margin_bottom = 14.0
text = "0 energy"

[node name="ingredients_container" type="VBoxContainer" parent="main_container"]
margin_top = 19.0
margin_right = 200.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_tiny" type="TextureRect" parent="main_container"]
margin_top = 24.0
margin_right = 16.0
margin_bottom = 54.0
rect_min_size = Vector2( 16, 30 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 4 )
expand = true

[node name="results_container" type="VBoxContainer" parent="main_container"]
margin_top = 59.0
margin_right = 200.0
margin_bottom = 59.0
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="HBoxContainer" parent="main_container"]
visible = false
margin_top = 50.0
margin_right = 159.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_label" type="Label" parent="main_container/container"]
margin_right = 159.0
margin_bottom = 31.0
text = "1 apple -> 4 apple_sliced
"
